--- a/package.json
+++ b/package.json
@@ -36,10 +36,8 @@
     "babel-preset-stage-0": "^6.24.1"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
     "inferno": "^3",
     "inferno-component": "^3.6.4",
-    "inferno-create-element": "^3.6.4",
-    "safe-utils": "^0.1.1"
+    "inferno-create-element": "^3.6.4"
   }
 }
