--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Library of animation helpers for Inferno components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"TODO: Write tests...\"",
+    "test": "npm run build-test && node test/server.js",
     "prepublish": "npm run build",
     "postversion": "git push && git push --tags",
     "build": "rm -rf ./dist && NODE_ENV=production babel lib --out-dir dist  --source-maps",
-    "build-dev": "rm -rf ./dist && babel lib --out-dir dist --watch --source-maps"
+    "build-dev": "rm -rf ./dist && babel lib --out-dir dist --watch --source-maps",
+    "build-test": "rm -rf ./test/dist && node_modules/.bin/webpack --config ./test/webpack.config.js",
+    "build-test-dev": "rm -rf ./test/dist && node_modules/.bin/webpack --watch --config ./test/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -26,14 +28,21 @@
   "homepage": "https://github.com/jhsware/inferno-animation#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-inferno": "^3.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "express": "^4.15.3",
+    "history": "^4.6.3",
+    "inferno": "^3.6.4",
+    "inferno-component": "^3.6.4",
+    "inferno-router": "^3.6.4",
+    "webpack": "^2.7.0"
   },
   "dependencies": {
     "inferno": "^3",
