--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Library of animation helpers for Inferno components",
   "main": "index.js",
   "scripts": {
-    "test": "npm run build-test && node test/server.js",
+    "test": "npm run build && npm run build-test",
+    "test-browser": "npm run build-test && node test/server.js",
     "prepublish": "npm run build",
     "postversion": "git push && git push --tags",
     "build": "rm -rf ./dist && NODE_ENV=production babel lib --out-dir dist  --source-maps",
