--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,7 @@
 {
   "presets": ["es2015", "stage-0"],
   "plugins": [
-      [
-        "babel-plugin-inferno",
-        {
-          "imports": true
-        }
-      ]
-    ]
+    [ "babel-plugin-inferno", { "imports": true } ],
+    "add-module-exports"
+  ]
 }
