--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-inferno": "^3.2.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-inferno": "^4.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "express": "^4.16.0",
-    "history": "^4.7.2",
-    "inferno": "^3.9.0",
-    "inferno-component": "^3.9.0",
-    "inferno-router": "^3.9.0",
-    "webpack": "^2.7.0"
+    "express": "^4.16.2",
+    "inferno": "^4.0.3",
+    "inferno-component": "^4.0.3",
+    "inferno-router": "^4.0.3",
+    "webpack": "^3.11.0"
   },
   "dependencies": {
-    "inferno-create-element": "^3.9.0"
+    "inferno-create-element": "^4.0.3"
   }
 }
