--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "express": "^4.16.2",
-    "inferno": "^4.0.3",
-    "inferno-component": "^4.0.3",
-    "inferno-router": "^4.0.3",
+    "inferno": "^4.0.8",
+    "inferno-router": "^4.0.8",
     "webpack": "^3.11.0"
   },
+  "peerDependencies": {
+    "inferno": "=>4"
+  },
   "dependencies": {
-    "inferno-create-element": "^4.0.3"
+    "inferno-create-element": "^4.0.8"
   }
 }
