--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,15 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": [
+    ["env", { "modules": false }],
+    "stage-2",
+    "inferno-app"
+  ],
   "plugins": [
-    "transform-object-rest-spread",
-    "add-module-exports",
-    [ "babel-plugin-inferno", { "imports": true } ]
-  ]
+    "transform-class-properties"
+  ],
+  "env": {
+    "production": {
+
+    }
+  }
 }
