--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "inferno-animation",
   "version": "5.0.0",
   "description": "Library of animation helpers for Inferno components",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "umd:main": "dist/umd/index.js",
+  "module": "lib/index.js",
+  "files": [
+    "dist",
+    "lib"
+  ],
   "scripts": {
     "test": "npm run build && npm run build-test",
     "test-browser": "npm run build-test && node test/server.js",
     "prepublish": "NODE_ENV=development npm run build",
     "postversion": "git push && git push --tags",
-    "build": "rm -rf ./dist && NODE_ENV=production babel lib --out-dir dist  --source-maps",
+    
     "build-dev": "rm -rf ./dist && babel lib --out-dir dist --watch --source-maps",
     "build-test": "rm -rf ./test/dist && node_modules/.bin/webpack --config ./test/webpack.config.js",
-    "build-test-dev": "rm -rf ./test/dist && node_modules/.bin/webpack --watch --config ./test/webpack.config.js"
+    "build-test-dev": "rm -rf ./test/dist && node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
+
+    "build": "npm run build:clean && npm run build:es && npm run build:dist && npm run build:dist:prod",
+    "build:clean": "rm -rf dist/ && rm -rf lib/",
+    "build:es": "cross-env NODE_ENV=development babel src --out-dir lib",
+    "build:dist": "cross-env NODE_ENV=development rollup -c",
+    "build:dist:prod": "cross-env NODE_ENV=production rollup -c",
+
+    "prepare": "npm run build",
+    "precommit": "lint-staged",
+    "lint": "eslint --ext .js,.jsx src/ example/"
   },
   "repository": {
     "type": "git",
@@ -31,17 +47,26 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-inferno": "^5.0.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-inferno-app": "^7.1.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.5",
     "express": "^4.16.2",
     "inferno": "^5.0.1",
     "inferno-router": "^5.0.1",
+    "rollup": "^0.57.1",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-babel-minify": "^4.0.0",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-globals": "^1.2.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
     "webpack": "^3.11.0"
   },
   "peerDependencies": {
