--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inferno-animation",
-  "version": "5.0.0",
+  "version": "5.1.0-beta.1",
   "description": "Library of animation helpers for Inferno components",
   "main": "dist/cjs/index.js",
   "umd:main": "dist/umd/index.js",
@@ -15,9 +15,9 @@
     "prepublish": "NODE_ENV=development npm run build",
     "postversion": "git push && git push --tags",
     
-    "build-dev": "rm -rf ./dist && babel lib --out-dir dist --watch --source-maps",
-    "build-test": "rm -rf ./test/dist && node_modules/.bin/webpack --config ./test/webpack.config.js",
-    "build-test-dev": "rm -rf ./test/dist && node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
+    "build-dev": "rm -rf ./dist && cross-env NODE_ENV=development babel lib --out-dir dist --watch --source-maps",
+    "build-test": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --config ./test/webpack.config.js",
+    "build-test-dev": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
 
     "build": "npm run build:clean && npm run build:es && npm run build:dist && npm run build:dist:prod",
     "build:clean": "rm -rf dist/ && rm -rf lib/",
