--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inferno-animation",
-  "version": "5.1.0-beta.2",
+  "version": "5.1.0",
   "description": "Library of animation helpers for Inferno components",
   "main": "dist/cjs/index.js",
   "umd:main": "dist/umd/index.js",
