--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-inferno-app": "^7.1.0",
     "babel-preset-stage-2": "^6.24.1",
