--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "build-test": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --config ./test/webpack.config.js",
     "build-test-dev": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
 
-    "build": "npm run build:clean && npm run build:es && npm run build:dist && npm run build:dist:prod",
+    "build": "npm run build:clean && npm run build:es && npm run build:dist && npm run build:dist:prod & npm run build:legacy",
     "build:clean": "rm -rf dist/ && rm -rf lib/",
     "build:es": "cross-env NODE_ENV=development babel src --out-dir lib",
     "build:dist": "cross-env NODE_ENV=development rollup -c",
     "build:dist:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:legacy": "cross-env NODE_ENV=production babel src --out-dir dist",
 
     "prepare": "npm run build",
     "precommit": "lint-staged",
