--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "dist/cjs/index.js",
   "umd:main": "dist/umd/index.js",
   "module": "lib/index.js",
+  "files": [
+    "dist",
+    "lib"
+  ],
   "scripts": {
     "test": "npm run build && npm run build-test",
     "test-browser": "npm run build-test && node test/server.js",
@@ -13,7 +17,7 @@
     "build-dev": "rm -rf ./dist && cross-env NODE_ENV=development babel lib --out-dir dist --watch --source-maps",
     "build-test": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --config ./test/webpack.config.js",
     "build-test-dev": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
-    "build": "npm run build:clean && npm run build:es && npm run build:dist && npm run build:dist:prod & npm run build:legacy",
+    "build": "npm run build:es && npm run build:dist && npm run build:dist:prod & npm run build:legacy",
     "build:clean": "rm -rf dist/ && rm -rf lib/",
     "build:es": "cross-env NODE_ENV=development babel src --out-dir lib",
     "build:dist": "cross-env NODE_ENV=development rollup -c",
