--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
   "presets": [
-    ["env", { "modules": false }],
-    "stage-2",
+    ["@babel/env", { "modules": false }],
     "inferno-app"
   ],
   "plugins": [
-    "transform-class-properties"
+    ["@babel/proposal-decorators", { "legacy": true}],
+    "@babel/proposal-class-properties",
+    "@babel/transform-runtime"
   ],
   "env": {
     "production": {
