--- a/package.json
+++ b/package.json
@@ -42,36 +42,40 @@
   },
   "homepage": "https://github.com/jhsware/inferno-animation#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-inferno": "^5.0.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-inferno-app": "^7.1.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "cross-env": "^5.0.5",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-inferno": "6.0.0",
+    "babel-preset-inferno-app": "^8.0.1",
+    "component-registry": "1.0.0-rc.6",
+    "create-inferno-app": "^7.0.5",
+    "cross-env": "^5.2.0",
     "express": "^4.16.2",
-    "inferno": "^5.0.1",
-    "inferno-router": "^5.0.1",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-babel-minify": "^4.0.0",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-globals": "^1.2.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
+    "inferno": "^6.0.1",
+    "inferno-router": "^6.0.1",
+    "isomorphic-schema": "1.0.0-beta.6",
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-babel-minify": "^6.1.1",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
     "webpack": "^3.11.0"
   },
   "peerDependencies": {
-    "inferno": "=>5"
+    "inferno": "=>6"
   },
   "dependencies": {
-    "inferno-create-element": "^5.3.0"
+    "inferno-create-element": "^6.0.1"
   }
 }
