--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-inferno": "6.0.0",
     "babel-preset-inferno-app": "^8.0.1",
-    "component-registry": "1.0.0-rc.6",
+    "component-registry": "1.0.0-rc.7",
     "create-inferno-app": "^7.0.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.2",
     "inferno": "^6.0.1",
+    "inferno-extras": "^6.0.3",
     "inferno-router": "^6.0.1",
-    "isomorphic-schema": "1.0.0-beta.6",
+    "isomorphic-schema": "1.0.0-beta.7",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-babel-minify": "^6.1.1",
