--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prepublish": "NODE_ENV=development npm run build",
     "postversion": "git push && git push --tags",
     "build-dev": "rm -rf ./dist && cross-env NODE_ENV=development babel lib --out-dir dist --watch --source-maps",
-    "build-test": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --config ./test/webpack.config.js",
-    "build-test-dev": "rm -rf ./test/dist && cross-env NODE_ENV=development node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
+    "build-test": "rm -rf ./test/dist && cross-env NODE_ENV=test node_modules/.bin/webpack --config ./test/webpack.config.js",
+    "build-test-dev": "rm -rf ./test/dist && cross-env NODE_ENV=test node_modules/.bin/webpack --watch --config ./test/webpack.config.js",
     "build": "npm run build:es && npm run build:dist && npm run build:dist:prod & npm run build:legacy",
     "build:clean": "rm -rf dist/ && rm -rf lib/",
     "build:es": "cross-env NODE_ENV=development babel src --out-dir lib",
