--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-inferno": "6.0.4",
     "babel-preset-inferno-app": "^8.0.3",
-    "component-registry": "1.0.0-rc.7",
+    "component-registry": "^1.3.1",
     "create-inferno-app": "^7.0.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.2",
-    "inferno": "^7.3.3",
-    "inferno-extras": "^7.3.3",
-    "inferno-router": "^7.3.3",
-    "isomorphic-schema": "1.0.0-beta.7",
+    "inferno": "^7.4.7",
+    "inferno-extras": "^7.4.7",
+    "inferno-router": "^7.4.7",
+    "isomorphic-schema": "^1.2.1",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-babel-minify": "^6.1.1",
