--- a/package.json
+++ b/package.json
@@ -44,27 +44,25 @@
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-syntax-jsx": "^7.0.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-add-module-exports": "^1.0.0",
-    "babel-plugin-inferno": "6.0.4",
+    "babel-plugin-inferno": "^6.2.0",
     "babel-preset-inferno-app": "^8.0.3",
-    "component-registry": "^1.3.1",
     "create-inferno-app": "^7.0.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.2",
     "inferno": "^7.4.8",
     "inferno-extras": "^7.4.8",
     "inferno-router": "^7.4.8",
-    "isomorphic-schema": "^1.2.1",
-    "rollup": "^0.66.6",
+    "rollup": "^1.0.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-babel-minify": "^6.1.1",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -77,6 +75,15 @@
     "inferno": ">=7"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
     "inferno-create-element": "^7.4.8"
   }
 }
